# Speech_processing

./: README.md  app.py  pipeline.py  pyproject.toml  requirements.txt  tunnel.py
asr/: __init__.py  audio.py  cascaded_encoder_backend.py  common.py  faster_whisper_backend.py  transformers_backend.py
backend/_pycache_/: model_manager.py
backend/asr/: __init__.py
backend/asr/_pycache_/: config.py  transcriber.py
backend/models/: cascaded_encoder.py  faster_whisper_asr.py  model3_whisper.py
frontend/: app.py
notebooks/: run_faster_phowhisper_colab_kaggle.ipynb  train_cascaded_phowhisper_colab_kaggle.ipynb
scripts/: convert_whisper_to_ctranslate2.py  smoke_asr.py
tests/: test_asr_config.py
translate/: __init__.py  opus_mt.py
