[project]
name = "faster-phowhisper"
version = "0.1.0"
description = "Real-time Vietnamese speech recognition with Faster-Whisper"
readme = "README.md"
requires-python = ">=3.12,<3.13"

dependencies = [
    "av>=16.1.0",
    "ctranslate2==4.8.1",
    "faster-whisper>=1.2.1",
    "huggingface-hub>=0.34,<1",
    "librosa>=0.11.0",
    "pyngrok>=7.4.1",
    "safetensors>=0.8.0",
    "scipy>=1.18.0",
    "sentencepiece>=0.2.2",
    "sounddevice>=0.5.5",
    "soundfile>=0.14.0",
    "streamlit>=1.59.1",
    "streamlit-webrtc>=0.75.1",
    "torch==2.11.0",
    "transformers==4.57.3",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
